# prez-mcp

./: .gitignore  .gitmodules  CLAUDE.md  README.md  mise.toml  pyproject.toml  test_elicitation.py  test_sampling.py  test_sampling_with_handler.py
demo/: sampling_payload.json
docs/: cfp-matching.md  elicitation-integration.md  elicitation.md  sampling-handler.md
examples/: run_client.py  run_server.py
mcp_client/: README.md  __init__.py  client.py
mcp_server/: __init__.py  markdown_parser.py  server.py  server_demo1.py  server_demo2.py  utils.py
prez/: logs.txt  package-lock.json  package.json  plan.md  slides.md  style.css
prez/components/: ContactLink.vue  Footer.vue  Quote.vue  SlideHeader.vue
prez/layouts/: center.vue  conclusion.vue  cover.vue  default.vue  image.vue  presentation.vue  section-with-header.vue  section.vue  two-cols.vue
prez/pages/: 01-introduction.md  01b-presentation.md  02-architecture.md  03-features-serveur.md  03-lifecycle.md  04-features-serveur.md  04-lifecycle.md  05-dev-serveur.md  06-features-client.md  07-dev-client.md  08-ecosysteme.md  09-conclusion.md
prez/public/videos/: demo-client.cast
prez/sujets_cfp/: ide.md  kagent.md  mcp.md
tests/: test_markdown_parser.py  test_mcp.py  test_server.py
